<resources>
    <string name="app_name">WalKompanion</string>
    <string name="logo">Logo do aplicativo WalKompanion</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="btn_login">Login</string>
    <string name="txt_signup">Cadastre-se</string>
    <string name="hint_confirm">Confirme a senha.</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_home">Home</string>
    <string name="nav_history">Histórico</string>
    <string name="text_welcome">Bem-vindo, </string>
    <string name="btn_walk">Caminhar</string>
    <string name="hint_name">Nome Completo</string>
    <string name="btn_logout">Logout</string>
    <string name="txt_placeholder">Placeholder</string>
    <string name="hint_new_password">Nova Senha</string>
    <string name="hint_confirm_new_pw">Confirme a nova senha</string>
    <string name="reset_password">Mudar Senha</string>
    <string name="text_timestamp">Data e Hora</string>
    <string name="text_duration">Duracao</string>
    <string name="text_steps">Passos</string>
    <string name="text_distance">Distancia</string>
    <string name="txt_history">Histórico</string>
    <string name="page_next">Carregar Mais</string>
    <string name="finish_walk">Finalizar</string>
</resources>